--- a/แบบสำรวจคะแนน.html
+++ b/แบบสำรวจคะแนน.html
@@ -1163,9 +1163,10 @@
         // ฟังก์ชันโหลดข้อมูลจาก Google Apps Script
         async function loadAllScores() {
             try {
+                // ใช้ URL ที่ถูกต้องสำหรับ Google Apps Script
                 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxAkO4i5fOaSsIAeOebNnX9wwUrmDhPSEXcPMLltqS13dYix40q4FFPKAg6qPWE_b5-8Q/exec';
                 
-                const response = await fetch(SCRIPT_URL);
+                const response = await fetch(SCRIPT_URL + '?action=get');
                 const result = await response.json();
                 
                 if (result.success) {
