--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@
                             <li><span class="font-bold text-indigo-500">ประกาศปกติ:</span> <a href="https://drive.google.com/file/d/1AYDXEpeodNYrPIJpwI5gEYDLK5A908ro/view?usp=sharing" target="_blank" class="text-blue-500 hover:underline">ห้องเรียนปกติ คลิกที่นี่</a></li>
                             <li><span class="font-bold text-indigo-500">Facebook:</span> <a href="https://www.facebook.com/share/p/1GaST4RN1y/" target="_blank" class="text-blue-500 hover:underline">รายละเอียดเพิ่มเติม</a></li>
                         </ul>
+                        <li><span class="font-bold text-indigo-500">สมัครสอบได้ที่:</span> <a href="https://www.psschool.in.th/sites/satriwit.ac.th/pretest/index.php?/register/general/" target="_blank" class="text-blue-500 hover:underline">รายละเอียดเพิ่มเติม</a></li>
+                        </ul>
 
                         <h3 class="font-extrabold text-xl mt-8 mb-4 text-green-600">Line OPC : SW Pre-Test 69</h3>
                         <p class="mb-3 text-sm">โดยกลุ่มบริหารวิชาการ</p>
