--- a/แบบสำรวจ.html
+++ b/แบบสำรวจ.html
@@ -674,8 +674,8 @@
         let currentGradeTab = 'all';
         let currentView = 'form';
 
-        // URL ของ Google Apps Script Web App - ใช้ URL ของคุณ
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyPYEJNpGanQGZwh-02RfK34L6hRcR3EMOY-YlvUhvbHoM06tcvirXgGZSSOb7Mj3WljA/exec';
+        // URL ของ Google Apps Script Web App - แทนที่ด้วย URL ใหม่ของคุณ
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxEqajhD_CXU8dLwEbOpTRtpDET22zBzRlXmnxQBkk9VfMmIgTe7qBcIG6xZA_iK-SYfw/exec';
 
         // ข้อมูลสำหรับการวิเคราะห์
         const historicalData2568 = {
