--- a/แบบสำรวจ.html
+++ b/แบบสำรวจ.html
@@ -576,37 +576,101 @@
                             </div>
 
                             <!-- Breakdowns -->
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                <!-- Breakdown Text -->
-                                <div class="chart-card space-y-4">
-                                    <h3 class="chart-title">สัดส่วนผู้ตอบแบบสำรวจ</h3>
-                                    <div class="stat-breakdown">
-                                        <strong>ตามระดับชั้น:</strong> 
-                                        ป.4 (<span id="overall-by-grade-p4">0</span>) | 
-                                        ป.5 (<span id="overall-by-grade-p5">0</span>) | 
-                                        ป.6 (<span id="overall-by-grade-p6">0</span>)
-                                    </div>
-                                    <div class="stat-breakdown">
-                                        <strong>ตามประเภทห้องเรียน:</strong> 
-                                        พิเศษ (<span id="overall-by-program-special">0</span>) | 
-                                        ปกติ (<span id="overall-by-program-normal">0</span>)
-                                    </div>
-                                    <div class="stat-breakdown">
-                                        <strong>ตามรูปแบบสอบ:</strong> 
-                                        On-site (<span id="overall-by-type-onsite">0</span>) | 
-                                        Online (<span id="overall-by-type-online">0</span>)
-                                    </div>
-                                    <p class="text-xs text-gray-500 text-center mt-2">(นับตามจำนวนข้อสอบที่ส่ง ไม่ใช่จำนวนคน)</p>
-                                </div>
-                                <!-- Breakdown Chart -->
-                                <div class="chart-card">
-                                    <h3 class="chart-title">กราฟสัดส่วนผู้ตอบ (ตามระดับชั้น)</h3>
-                                    <div class="chart-container-improved">
-                                        <canvas id="overall-proportion-chart"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                            <section class="grid grid-cols-1 md:grid-cols-2 gap-6 items-start">
+  <!-- Left: breakdown text -->
+  <div class="bg-white rounded-2xl shadow-md p-6 space-y-4">
+    <div class="flex items-start gap-4">
+      <div class="w-12 h-12 rounded-lg bg-gradient-to-br from-green-400 to-teal-500 flex items-center justify-center text-white">
+        <!-- simple icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 7v4a1 1 0 001 1h3m10 0h3a1 1 0 001-1V7M7 21h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v12a2 2 0 002 2z" />
+        </svg>
+      </div>
+      <div>
+        <h3 class="text-lg font-medium">สถิติโดยรวม</h3>
+        <p class="text-sm text-slate-500">สรุปสัดส่วนผู้ตอบตามเกณฑ์ต่าง ๆ</p>
+      </div>
+    </div>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+      <div class="p-4 border rounded-lg bg-gradient-to-br from-white to-slate-50">
+        <h4 class="text-sm font-semibold text-slate-600">ตามระดับชั้น</h4>
+        <div class="mt-3 text-sm text-slate-700 space-y-2">
+          <div class="flex items-center justify-between">
+            <span>ป.4</span>
+            <span id="overall-by-grade-p4" class="font-medium">0</span>
+          </div>
+          <div class="flex items-center justify-between">
+            <span>ป.5</span>
+            <span id="overall-by-grade-p5" class="font-medium">0</span>
+          </div>
+          <div class="flex items-center justify-between">
+            <span>ป.6</span>
+            <span id="overall-by-grade-p6" class="font-medium">0</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-4 border rounded-lg bg-gradient-to-br from-white to-slate-50">
+        <h4 class="text-sm font-semibold text-slate-600">ตามประเภทห้องเรียน</h4>
+        <div class="mt-3 text-sm text-slate-700 space-y-2">
+          <div class="flex items-center justify-between">
+            <span>พิเศษ</span>
+            <span id="overall-by-program-special" class="font-medium">0</span>
+          </div>
+          <div class="flex items-center justify-between">
+            <span>ปกติ</span>
+            <span id="overall-by-program-normal" class="font-medium">0</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="p-4 border rounded-lg bg-gradient-to-br from-white to-slate-50">
+      <h4 class="text-sm font-semibold text-slate-600">ตามรูปแบบสอบ</h4>
+      <div class="mt-3 text-sm text-slate-700 flex gap-4">
+        <div class="flex-1">
+          <div class="flex items-center justify-between">
+            <span>On-site</span>
+            <span id="overall-by-type-onsite" class="font-medium">0</span>
+          </div>
+        </div>
+        <div class="flex-1">
+          <div class="flex items-center justify-between">
+            <span>Online</span>
+            <span id="overall-by-type-online" class="font-medium">0</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="text-xs text-slate-400 text-center">(ข้อมูลอัปเดตอัตโนมัติเมื่อมีการกรอกแบบฟอร์ม)</footer>
+  </div>
+
+  <!-- Right: chart card -->
+  <div class="bg-white rounded-2xl shadow-md p-6 flex flex-col gap-4">
+    <div class="flex items-center justify-between">
+      <h3 class="text-lg font-medium">กราฟสัดส่วนผู้ตอบ (ตามระดับชั้น)</h3>
+      <div class="text-sm text-slate-500">อัปเดตเรียลไทม์</div>
+    </div>
+    <div class="flex-1 flex items-center justify-center min-h-[220px]">
+      <canvas id="overall-proportion-chart" class="w-full max-w-sm"></canvas>
+    </div>
+
+    <div class="flex items-center gap-3 justify-center mt-2">
+      <span class="inline-flex items-center gap-2 text-sm">
+        <span class="w-3 h-3 rounded-full bg-green-400"></span> ป.4
+      </span>
+      <span class="inline-flex items-center gap-2 text-sm">
+        <span class="w-3 h-3 rounded-full bg-orange-400"></span> ป.5
+      </span>
+      <span class="inline-flex items-center gap-2 text-sm">
+        <span class="w-3 h-3 rounded-full bg-slate-400"></span> ป.6
+      </span>
+    </div>
+  </div>
+</section>
+
 
                         <!-- 2. 🚀 ผลคะแนนตามกลุ่ม (Performance by Category) -->
                         <section>
