--- a/Survey2026.html
+++ b/Survey2026.html
@@ -678,7 +678,7 @@
                                 </label>
                                 <label class="flex items-center">
                                     <input type="checkbox" id="target-special-gm" class="mr-3" onchange="validateTargetSelection()">
-                                    <span class="font-medium text-sm sm:text-base">Gifted Math</span>
+                                    <span class="font-medium text-sm sm:text-base">GM (Gifted Math)</span>
                                 </label>
                             </div>
                         </div>
@@ -884,7 +884,7 @@
         <div class="line-opc-section mx-4 sm:mx-6 mb-4 sm:mb-6">
             <div class="flex flex-col items-center">
                 <div class="text-center mb-4">
-                    <p class="text-base sm:text-lg font-semibold mb-2">🌟 รวบรวมข้อมูลและจัดทำโดย ... ลุ้นสอวอไปด้วยกันนะ 🌟</p>
+                    <p class="text-base sm:text-lg font-semibold mb-2">🌟 รวบรวมข้อมูลและออกแบบระบบโดย ... ลุ้นสอวอไปด้วยกันนะ 🌟</p>
                     <p class="text-lg sm:text-xl font-bold">ครอบครัวยอดนารี❤️สตรีวิทยา</p>
                 </div>
                 <a href="https://line.me/ti/g2/ZRIN-ofnybH08hXhS6OYTfIMeKqvupT0Qzd44Q?utmsource=invitation&utmmedium=linkcopy&utmcampaign=default" 
@@ -898,7 +898,7 @@
     </div>
     
     <footer class="text-center py-4 sm:py-6 text-gray-500 text-xs sm:text-sm">
-        <p>Developed for Satriwitthaya Pre-test Takers | ข้อมูลจะถูกบันทึกใน Firebase เท่านั้น</p>
+        <p>Developed for Satriwithaya Pre-test Takers | โดยลุ้นสอวอไปด้วยกันนะ</p>
     </footer>
 
     <script>
@@ -922,10 +922,10 @@
         let currentView = 'dashboard';
         let chartInstances = {};
         let isAdminLoggedIn = false;
-        const ADMIN_PASSWORD = "satriwit2024"; // เปลี่ยนรหัสผ่านตามต้องการ
+        const ADMIN_PASSWORD = "satriwit2025"; // เปลี่ยนรหัสผ่านตามต้องการ
 
         // 🚨 START: UPDATED V12 (Added chanceThresholds) 🚨
-        // ข้อมูลคะแนนปี 2568 สำหรับการเปรียบเทียบ
+        // ข้อมูลคะแนนสอบจริงปี 2568 สำหรับการเปรียบเทียบ
         const comparisonData2024 = {
             'EP': {
                 title: 'หลักสูตร EP (English Program)',
@@ -934,7 +934,7 @@
                 min: 119.17,
                 fullScore: 200,
                 chanceThresholds: { high: 145.00, medium: 130.00 }, // เกณฑ์ (สูง/ปานกลาง)
-                note: "คำนวณบนสมมุติฐานที่ได้ส่วนสัมภาษณ์เต็ม 20 คะแนน"
+                note: "คำนวณบนสมมุติฐานที่ได้คะแนนในส่วนสัมภาษณ์เต็ม 20 คะแนน"
             },
             'SMTE': {
                 title: 'หลักสูตร SMTE',
@@ -943,10 +943,10 @@
                 min: 47.75,
                 fullScore: 100,
                 chanceThresholds: { high: 62.00, medium: 52.00 },
-                note: "ไม่รวมคะแนนภาษาอังกฤษในการคำนวณ"
+                note: "หลักสูตร SMTE ไม่สอบวิชาภาษาอังกฤษจึงไม่นำมาใช้ในการคำนวณ"
             },
             'GM': {
-                title: 'หลักสูตร Gifted Math',
+                title: 'หลักสูตร GM (Gifted Math)',
                 max: 90.00,
                 avg: 73.30,
                 min: 66.00,
@@ -2346,12 +2346,12 @@
         function calculateAdmissionChance(projectedScore, stats) {
             const { chanceThresholds } = stats;
             if (projectedScore >= chanceThresholds.high) {
-                return { level: 'high', text: 'สูงมาก', description: 'ยอดเยี่ยมค่ะ! มีโอกาสสอบติดสูงมาก ควรเตรียมตัวให้พร้อมสำหรับการสัมภาษณ์นะคะ' };
+                return { level: 'high', text: 'พร้อมมาก', description: 'ยอดเยี่ยมมากค่ะ! ตอนนี้อยู่ในจุดที่พร้อมมากแล้ว ขอแค่รักษาความมุ่งมั่นไว้ ผลสำเร็จอยู่ไม่ไกลแน่นอนนะคะ' };
             } else if (projectedScore >= chanceThresholds.medium) {
-                return { level: 'medium', text: 'ปานกลาง', description: 'มีโอกาสสอบติดในระดับปานกลางค่ะ สู้ๆ! ฝึกทำข้อสอบเพิ่มเติมอีกนิดนะคะ' };
+                return { level: 'medium', text: 'มีลุ้น', description: 'มีโอกาสดีค่ะ! ควรรักษาความตั้งใจและเสริมจุดแข็งอีกเล็กน้อย เพื่อให้ผลออกมาดีที่สุดนะคะ' };
             } else {
                 // V12: เปลี่ยน "ต่ำ" เป็น "ท้าทาย"
-                return { level: 'low', text: 'ท้าทาย', description: 'ยังท้าทายอยู่ค่ะ แต่ยังมีเวลา! ควรฝึกฝนและเตรียมตัวเพิ่มเติมเพื่อเพิ่มโอกาสนะคะ' };
+                return { level: 'low', text: 'ท้าทาย', description: 'มาพยายามด้วยกันอีกนิดนะคะ ถ้าฝึกฝนอย่างสม่ำเสมอ เพิ่มเวลาเตรียมตัวอีกนิด ความสำเร็จอยู่ไม่ไกลแน่นอนค่ะ 🌱' };
             }
         }
 
