--- a/Survey2026.html
+++ b/Survey2026.html
@@ -836,10 +836,9 @@
                         <button onclick="refreshAdminData()" class="btn btn-secondary">
                             <i class="fas fa-sync-alt mr-2"></i> โหลดข้อมูลใหม่
                         </button>
-                        <button onclick="deleteAllRecords()" 
-                        class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg shadow transition duration-300 ease-in-out">
-                        <i class="fas fa-exclamation-triangle mr-2"></i> ลบข้อมูลทั้งหมด (Reset)
-                    </button>
+                        <button onclick="deleteAllRecords()" class="btn btn-danger">
+                            <i class="fas fa-exclamation-triangle mr-2"></i> ลบข้อมูลทั้งหมด (Reset)
+                        </button>
                     </div>
 
                     <!-- สถิติ Admin -->
