--- a/4.html
+++ b/4.html
@@ -3624,30 +3624,30 @@
                 `;
 
                 // ตั้งค่าสำหรับ PDF
-                constconst opt = {
-    margin: [10, 10, 10, 10], 
-    filename: `satriwit-analysis-${new Date().toISOString().split('T')[0]}.pdf`,
-    image: { type: 'jpeg', quality: 0.9 },
+                const opt = {
+                    margin: [10, 15, 10, 15], // top, right, bottom, left - เพิ่ม margin ซ้ายขวา
+                    filename: `satriwit-analysis-${new Date().toISOString().split('T')[0]}.pdf`,
+                    image: { type: 'jpeg', quality: 0.9 },
+                    html2canvas: { 
+                        scale: 2,
+                        useCORS: true,
+                        logging: false,
+                        scrollX: 0,
+                        scrollY: 0,
+                        width: 794,
+                        height: 1123,
+                        windowWidth: 794,
+                        letterRendering: true,
+                        backgroundColor: '#ffffff'
+                    },
+                    jsPDF: { 
+                        unit: 'mm', 
+                        format: 'a4', 
+                        orientation: 'portrait',
+                        compress: true
+                    }
+                };
 
-    html2canvas: { 
-        scale: 2,
-        useCORS: true,
-        logging: false,
-        scrollX: 0,
-        scrollY: 0,
-
-        // ใช้ความกว้างจริงของ element / body
-        windowWidth: document.body.scrollWidth,
-        backgroundColor: '#ffffff'
-    },
-
-    jsPDF: { 
-        unit: 'mm',
-        format: 'a4',
-        orientation: 'portrait',
-        compress: true
-    }
-};
                 // สร้าง PDF
                 await html2pdf().set(opt).from(pdfContent).save();
                 showMessage('สร้างไฟล์ PDF สำเร็จ!', 'success');      
