--- a/0.html
+++ b/0.html
@@ -759,10 +759,10 @@
                                     </svg>
                                 </div>
                                 <h4 class="text-2xl font-semibold text-center text-indigo-800 mb-3">
-                                    วิเคราะห์จุดแข็ง-จุดอ่อน
+                                    วิเคราะห์จุดแข็ง-จุดที่ควรเสริม
                                 </h4>
                                 <p class="text-gray-600 text-center">
-                                    สรุปผลรวมประเมินคะแนน และวิเคราะห์จุดแข็ง–จุดอ่อนรายวิชา เพื่อการพัฒนาที่ตรงจุด
+                                    สรุปผลรวมประเมินคะแนน และวิเคราะห์จุดแข็ง–จุดที่ควรเสริมรายวิชา เพื่อการพัฒนาที่ตรงจุด
                                 </p>
                             </div>
 
@@ -3118,7 +3118,7 @@
                         strengths.push(subject.name);
                     } else if (subject.score <= 12) { // เกณฑ์ 12/30
                         weaknesses.push(subject.name);
-                        improvements.push(`ทบทวนเนื้อหา${subject.name}และฝึกทำข้อสอบนะคะ`);
+                        improvements.push(`ทบทวนเนื้อหา${subject.name}และฝึกทำข้อสอบเพิ่มขึ้นอีกนิดนะคะ อย่าลืมลองทำแบบจับเวลาด้วยน้า เราจะสู้ไปด้วยกันค่ะ 💪😊`);
                     }
                 });
             }
@@ -3137,7 +3137,7 @@
             // วิเคราะห์โอกาสสอบติด (Tone)
             const chance = calculateAdmissionChance(projectedScore, stats);
             
-            // วิเคราะห์จุดแข็งจุดอ่อน (pass examType) (Tone)
+            // วิเคราะห์จุดแข็งจุดที่ควรเสริม (pass examType) (Tone)
             const analysis = analyzeStrengthsWeaknesses(preTestScores, target, examType);
 
             // สร้างตารางรายวิชา
@@ -3253,7 +3253,7 @@
                         </div>
                     </div>
                     
-                    <!-- แสดงจุดแข็งจุดอ่อน (Tone) -->
+                    <!-- แสดงจุดแข็ง และจุดที่ควรเสริม (Tone) -->
                     <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-4">
                         ${analysis.strengths.length > 0 ? `
                             <div class="strength-item p-4 rounded-lg">
@@ -3498,13 +3498,13 @@
             if (preTestTotal <= threshold.low) {
                 switch(target) {
                     case 'EP':
-                        summaryText = "ผลคะแนนอยู่ในระดับที่ยังต้องพัฒนา แสดงว่าน้องอาจต้องเสริมความเข้าใจพื้นฐาน และฝึกทำโจทย์ให้คุ้นเคยกับรูปแบบข้อสอบของหลักสูตร EP เพิ่มเติม แนะนำให้ทบทวนสรุปเนื้อหาและฝึกข้อสอบอย่างสม่ำเสมอ เพื่อเพิ่มความมั่นใจในการสอบจริงค่ะ";
+                        summaryText = "ผลคะแนนในครั้งนี้ยังไม่เป็นไปตามเป้าหมายที่ตั้งไว้ แต่ถือเป็นโอกาสดีในการพัฒนาทักษะเพิ่มเติมค่ะ หากน้องเสริมพื้นฐานและฝึกทำโจทย์อย่างต่อเนื่อง เราเชื่อว่าน้องทำได้ และความสำเร็จอยู่ไม่ไกลแน่นอนค่ะ ✨";
                         break;
                     case 'GM':
-                        summaryText = "คะแนนสอบอยู่ในระดับที่ควรปรับปรุง ซึ่งเป็นเรื่องปกติสำหรับการสอบแนว Gifted ที่เนื้อหาค่อนข้างลึกกว่าหลักสูตรทั่วไป แนะนำให้น้องฝึกโจทย์วิเคราะห์ให้มากขึ้น และทบทวนพื้นฐานสำคัญให้แน่นขึ้นก่อนสอบจริงค่ะ";
+                        summaryText = "ผลคะแนนรอบนี้อาจยังไม่สะท้อนศักยภาพของน้องได้เต็มที่ แต่ถือเป็นโอกาสดีในการเห็นจุดที่ยังสามารถพัฒนาได้นะคะ 😊 ลองทบทวนพื้นฐานให้แม่นยำขึ้น และฝึกทำโจทย์วิเคราะห์เพิ่มเติม เพื่อเตรียมตัวสำหรับการสอบ Gifted Math จริงค่ะ เชื่อว่าน้องมีความสามารถและจะพัฒนาได้อย่างแน่นอนค่ะ สู้ไปด้วยกันนะ 💪✨";
                         break;
                     case 'SMTE':
-                        summaryText = "ผลคะแนนสะท้อนว่าน้องควรเสริมพื้นฐานด้านเนื้อหาและการตีความโจทย์มากขึ้น แนะนำให้ฝึกทำแบบฝึกหัดสม่ำเสมอ โดยเน้นความเข้าใจและความแม่นยำ เพื่อเตรียมความพร้อมก่อนสอบจริงค่ะ";
+                        summaryText = "ผลคะแนนรอบนี้เป็นเพียงจุดเริ่มต้นในการเตรียมตัวเท่านั้นค่ะ สิ่งที่สำคัญคือโอกาสในการพัฒนาตัวเองต่อไป น้องสามารถเสริมพื้นฐานด้านเนื้อหาและฝึกการตีความโจทย์เพิ่มเติมได้ ด้วยการทำแบบฝึกหัดอย่างสม่ำเสมอ เน้นความเข้าใจและความแม่นยำ จะช่วยให้น้องมั่นใจและพร้อมเต็มที่สำหรับการสอบ SMTE รอบจริงค่ะ เชื่อว่าน้องมีศักยภาพที่จะทำได้ดีแน่นอนค่ะ💪✨";
                         break;
                     default: // Normal
                         summaryText = "คะแนนอยู่ในระดับที่ควรพัฒนา แนะนำให้น้องทบทวนเนื้อหาในแต่ละวิชาให้สม่ำเสมอ และทำแบบฝึกหัดเพิ่ม เพื่อเสริมความมั่นใจและความต่อเนื่องในการเตรียมสอบค่ะ";
