--- a/0.html
+++ b/0.html
@@ -3062,9 +3062,9 @@
         function calculateAdmissionChance(projectedScore, stats) {
             const { chanceThresholds } = stats;
             if (projectedScore >= chanceThresholds.high) {
-                return { level: 'high', text: 'พร้อมมาก', description: 'ยอดเยี่ยมมากค่ะ! ตอนนี้อยู่ในจุดที่พร้อมมากแล้ว ขอแค่รักษาความมุ่งมั่นไว้ ผลสำเร็จอยู่ไม่ไกลแน่นอนนะคะ' };
+                return { level: 'high', text: 'พร้อมมาก', description: 'ยอดเยี่ยมมากค่ะ! 🌟 ตอนนี้น้องอยู่ในจุดที่พร้อมเต็มที่แล้ว 💪 ขอแค่รักษาความมุ่งมั่นและตั้งใจต่อไป ✨ ผลสำเร็จอยู่ไม่ไกลแน่นอนค่ะ 🏆 เชื่อมั่นในตัวเองและทำเต็มที่นะคะ 💖📚' };
             } else if (projectedScore >= chanceThresholds.medium) {
-                return { level: 'medium', text: 'มีลุ้น', description: 'มีโอกาสดีค่ะ! ควรรักษาความตั้งใจและเสริมจุดแข็งอีกเล็กน้อย เพื่อให้ผลออกมาดีที่สุดนะคะ' };
+                return { level: 'medium', text: 'มีลุ้น', description: 'ถือว่าเป็นโอกาสดีมาก 💪 ขอให้น้องรักษาความตั้งใจและเสริมจุดแข็งอีกเล็กน้อย ✨ รับรองว่าผลลัพธ์ในการสอบจะออกมาดีที่สุดแน่นอน 🏆 เชื่อมั่นในตัวเองและทำเต็มที่นะคะ 💖' };
             } else {
                 // เปลี่ยน "ต่ำ" เป็น "ท้าทาย"
                 return { level: 'low', text: 'ท้าทาย', description: 'มาพยายามด้วยกันอีกนิดนะคะ ถ้าฝึกฝนอย่างสม่ำเสมอ เพิ่มเวลาเตรียมตัวอีกนิด ความสำเร็จอยู่ไม่ไกลแน่นอนค่ะ 🌱' };
@@ -3335,84 +3335,84 @@
             const adviceData = {
                 'EP': {
                     math: {
-                        low: 'ฝึกคำนวณและอ่านโจทย์ภาษาอังกฤษ',
-                        high: 'ทำโจทย์ประยุกต์ภาษาอังกฤษ'
+                        low: 'ทบทวนสูตรพื้นฐาน + ฝึกอ่านโจทย์และคำศัพท์เพิ่มเติม 📖🧮 แนะนำทำแบบฝึกหัดรายวันเพื่อเข้าใจการตีโจทย์',
+                        high: 'ทำโจทย์ประยุกต์และโจทย์แข่งขันระดับสูง 🏆 เพิ่มการฝึกคิดหลายขั้นตอนและเวลาในการทำโจทย์ อย่าลืมเสริมโจทย์ที่เป็นภาษาอังกฤษเพิ่มเติมนะคะ'
                     },
                     science: {
-                        low: 'ทบทวนหลักการ + ศัพท์วิทยาศาสตร์',
-                        high: 'ฝึกโจทย์ระดับยาก ภาษาอังกฤษ'
+                        low: 'ทบทวนหลักการและคำศัพท์วิทยาศาสตร์ 🔬 ลองวาด Mind Map แยกแนวคิดและคำศัพท์ อ่านทบทวนบ่อย ๆ เริ่มจากหัวข้อที่ยังไม่คล่อง เมื่อเห็นภาพรวมทั้งหมด ทำให้เข้าใจความเชื่อมโยง และจำได้แม่นขึ้นค่ะ 💛',
+                        high: 'ยอดเยี่ยมมากค่ะ! เข้าใจหลักการทางวิทยาศาสตร์ได้เป็นอย่างดี แนะนำให้ลองต่อยอดด้วยโจทย์แนววิเคราะห์การทดลอง และฝึกทำโจทย์ภาษาอังกฤษเพิ่มเติมด้วยนะคะ'
                     },
                     english: {
-                        low: 'เสริมคำศัพท์ + ฝึกอ่านจับใจความ',
-                        high: 'ฝึกบทอ่านยาวและโจทย์วิเคราะห์'
+                        low: 'เรามาปูพื้นฐานการอ่านให้แข็งแกร่งกันค่ะ! หัวใจสำคัญคือ ความสม่ำเสมอ ลองอ่านบทความภาษาอังกฤษสั้นๆ ทุกวัน แล้วจดคำศัพท์ใหม่ พร้อมฝึกสรุปใจความสำคัญ จะช่วยให้เข้าใจเรื่องราวและจับประเด็นได้ชัดเจนขึ้นค่ะ 💛',
+                        high: 'น้องมีทักษะการวิเคราะห์ภาษาอังกฤษที่เฉียบคมมากค่ะ สามารถและควรอย่างยิ่งที่จะลองทำชุดทดสอบแนว Reasoning หรือ Critical Thinking ในระดับที่สูงขึ้น เพื่อเตรียมความพร้อมสู่สนามจริงค่ะ'
                     }
                 },
                 'GM': {
                     math: {
-                        low: 'เสริมพื้นฐาน + โจทย์หลายขั้นตอน',
-                        high: 'ฝึกโจทย์แข่งขัน/โอลิมปิก'
+                        low: 'เรามาทบทวนพื้นฐานให้แน่นปึ้กอีกนิดนะคะ 😊 จากนั้นลองลุย โจทย์วิเคราะห์หลายขั้นตอน พร้อม จับเวลาทำโจทย์แบบ Speed Test จะช่วยให้แก้โจทย์ยากๆ ได้มั่นใจมากขึ้น และทำทันเวลาอย่างแน่นอนค่ะ 💛',
+                        high: 'น้องมีศักยภาพสูงมากค่ะ! 🌟 แสดงให้เห็นทักษะด้านคณิตศาสตร์ที่ยอดเยี่ยม พร้อมที่จะไปต่อในระดับที่สูงขึ้นแล้ว แนะนำให้ลองหาโจทย์แนวแข่งขันมาฝึกฝีมือ จะช่วยพัฒนาความสามารถให้เก่งขึ้นอีก และพร้อมก้าวเข้าสู่ GM22 ได้เลยค่ะ🎓'
                     },
                     science: {
-                        low: 'เสริมการวิเคราะห์ข้อมูล',
-                        high: 'ฝึกโจทย์เชิงทดลอง/เชิงลึก'
+                        low: 'น้องลองฝึกฝนทักษะการวิเคราะห์ข้อมูล (จากตาราง/กราฟ) และการเชื่อมโยงเหตุผลทางวิทยาศาสตร์ เพียงเพิ่มจุดนี้อีกนิด ก็จะเก่งขึ้นและมั่นใจขึ้นมากเลยค่ะ 💡',
+                        high: 'ยอดเยี่ยมมากค่ะ!🌟 น้องเข้าใจหลักการทางวิทยาศาสตร์ได้ดีมาก แนะนำให้ลองต่อยอดด้วยโจทย์วิเคราะห์การทดลอง หรือโจทย์เชิงลึกที่ต้องประยุกต์หลายๆ ความรู้เข้าด้วยกัน จะช่วยให้ความเข้าใจแน่นขึ้น และพร้อมเผชิญโจทย์ยากๆ ได้อย่างมั่นใจค่ะ 💡'
                     },
                     english: {
-                        low: 'ฝึกตีความ + ศัพท์วิเคราะห์',
-                        high: 'ฝึกชุด reasoning ระดับสูง'
+                        low: 'เรามาปูพื้นฐานการอ่านให้แข็งแกร่งกันค่ะ! หัวใจสำคัญคือ ความสม่ำเสมอ ลองอ่านบทความภาษาอังกฤษสั้นๆ ทุกวัน แล้วจดคำศัพท์ใหม่ พร้อมฝึกสรุปใจความสำคัญ จะช่วยให้เข้าใจเรื่องราวและจับประเด็นได้ชัดเจนขึ้นค่ะ 💛',
+                        high: 'น้องมีทักษะการวิเคราะห์ภาษาอังกฤษที่ยอดเยี่ยมมากค่ะ🌟แนะนำให้น้องลองทำ ชุดทดสอบแนว Reasoning หรือ Critical Thinking ในระดับที่สูงขึ้นจะช่วยพัฒนาความสามารถให้เฉียบคมยิ่งขึ้น และเตรียมความพร้อมสู่สนามจริงได้อย่างมั่นใจค่ะ💡'
                     }
                 },
                 'SMTE': {
                     math: {
-                        low: 'ทบทวนสูตร + ฝึกคำนวณเป็นขั้นตอน',
-                        high: 'โจทย์ประยุกต์/ระดับลึก'
+                        low: 'เรามาเพิ่มความเข้าใจที่มาของสูตรอีกนิดนะคะ😊ไม่ใช่แค่ท่องจำเท่านั้น แต่ลองฝึกคำนวณเป็นขั้นตอนอย่างแม่นยำ และจับเวลาในการทำข้อสอบ รับรองว่าน้องจะทำโจทย์ได้คล่องขึ้นและมั่นใจมากขึ้นค่ะ💡',
+                        high: 'น้องทำได้ดีมากค่ะ!🌟น้องมีความเข้าใจและทักษะการคำนวณที่ยอดเยี่ยม แนะนำให้ลองต่อยอดด้วยโจทย์คณิตประยุกต์ หรือศึกษาเนื้อหาลึกขึ้นกว่าในระดับชั้นจะช่วยให้เก่งขึ้นและมั่นใจมากขึ้นค่ะ💡'
                     },
                     science: {
-                        low: 'ทบทวนเนื้อหา + ฝึกอ่านโจทย์ข้อมูลเยอะ',
-                        high: 'โจทย์สถานการณ์จริง/แนวแข่งขัน'
+                        low: 'คะแนนส่วนนี้สามารถเก็บเพิ่มได้ไม่ยากค่ะ แนะนำให้ทบทวนเนื้อหาพื้นฐานให้แม่นยำ และฝึกทำโจทย์ที่ให้ข้อมูลหรือสถานการณ์เยอะ ๆ (โจทย์ยาว) จะช่วยให้เราจับประเด็นได้เร็วขึ้น และเพิ่มความมั่นใจเวลาทำข้อสอบค่ะ',
+                        high: 'มีพื้นฐานวิทย์ที่ดีมากค่ะ แสดงว่ามีความเข้าใจในหลักการ แนะนำให้ท้าทายความสามารถต่อด้วยโจทย์แนวแข่งขันสสวท. TEDET ได้เลยค่ะ'
                     }
                 },
                 'Normal_In': {
                     math: {
-                        low: 'ทบทวนสูตรพื้นฐาน',
-                        high: 'ฝึกโจทย์ประยุกต์'
+                        low: 'ความพยายามอยู่ที่ไหน ความสำเร็จอยู่ที่นั่นค่ะ แนะนำให้ทบทวนสูตรพื้นฐานให้แม่นยำ และ ‘ฝึก’ ทำโจทย์ซ้ำๆ บ่อยๆ ให้เกิดความชำนาญ แค่นี้ก็เก่งขึ้นได้แล้วค่ะ',
+                        high: 'เยี่ยมเลยค่ะ! มีความแม่นยำในการคำนวณที่ดี แนะนำให้ลองฝึกโจทย์คำนวณประยุกต์ (โจทย์ปัญหา) ที่ท้าทายมากขึ้นได้เลยค่ะ'
                     },
                     science: {
-                        low: 'ทบทวนหลักการสำคัญ',
-                        high: 'ฝึกโจทย์วิเคราะห์'
+                        low: 'วิชาวิทย์เริ่มจากความเข้าใจเป็นหลักค่ะ 🧪 ลองทบทวนหลักการพื้นฐานเพิ่มอีกนิดแล้วสรุปเป็นแผนภาพความคิด (Mind Map) 🌳 ในสไตล์น่ารักๆ ของเราเอง วิธีนี้จะช่วยให้น้องเห็นภาพรวมและเข้าใจว่าข้อไหนเชื่อมโยงกับข้อไหนได้ชัดเจนขึ้นค่ะ ✨',
+                        high: 'เก่งมากเลยค่ะ! 🌟 แสดงว่ามีความเข้าใจเนื้อหาแล้ว ลองต่อยอดด้วยโจทย์เชิงเหตุผลหรือโจทย์วิเคราะห์ จะทำให้เก่งขึ้นไปอีกนะคะ 💪'
                     },
                     english: {
-                        low: 'เสริมคำศัพท์พื้นฐาน',
-                        high: 'ไวยากรณ์ + บทอ่านยากขึ้น'
+                        low: 'ค่อยๆ ไปทีละขั้นนะคะ แนะนำให้เริ่มจากสร้างคลังคำศัพท์พื้นฐานที่ต้องใช้บ่อยๆ และฝึกอ่านบทความสั้นๆ ให้คล่องก่อน พอเรามั่นใจขึ้น คะแนนก็จะตามมาเองค่ะ',
+                        high: 'ทำได้ดีมากค่ะ พื้นฐานภาษาอังกฤษดีเลย แนะนำให้ต่อยอดด้วยบทอ่านที่ยาวขึ้น และลองศึกษาโครงสร้างไวยากรณ์ (Grammar) ที่ซับซ้อนขึ้นได้เลยค่ะ'
                     },
                     thai: {
-                        low: 'ฝึกอ่านจับใจความ',
-                        high: 'บทอ่านวิเคราะห์ยาวขึ้น'
+                        low: 'น้องลองฝึกอ่านจับใจความและวิเคราะห์บทความ พร้อมฝึกตัดตัวเลือกที่ไม่เกี่ยวข้อง จะช่วยให้น้องทำคะแนนได้ดีขึ้นค่ะ',
+                        high: 'ยอดเยี่ยมค่ะ! น้องมีทักษะการอ่านที่ดี แนะนำให้ต่อยอดด้วยการฝึกอ่านบทวิเคราะห์หรือบทความที่ยาวและซับซ้อนขึ้นค่ะ'
                     },
                     social: {
-                        low: 'อ่านสรุป + คำสำคัญ',
-                        high: 'ฝึกโจทย์ข้อมูลและกราฟ'
+                        low: 'วิชานี้เนื้อหาค่อนข้างเยอะ แต่เราสู้ได้แน่นอนค่ะ 💪✨ แนะนำให้อ่านสรุปเนื้อหาและเน้นทบทวนคำสำคัญ (‘Keywords’) ของโจทย์ ใช้วิธีตัดตัวเลือกช่วยให้จับประเด็นข้อสอบได้ง่ายขึ้นค่ะ และอย่าลืมติดตามข่าวสารสำคัญ ๆ ที่เกิดขึ้นในแต่ละปีกันด้วยนะคะ 📰🌟',
+                        high: 'ยอดเยี่ยมมากเลยค่ะ! 🌟 แสดงว่าน้องมีจุดแข็งชัดเจน คือความเข้าใจและการจดจำเนื้อหาได้แม่นยำ 💡 อย่าลืมติดตามข่าวสารสำคัญ ๆ ที่เกิดขึ้นในแต่ละปี เช่น สถานการณ์เศรษฐกิจ ปัญหาสิ่งแวดล้อม หรือเหตุการณ์การเมือง อย่างสม่ำเสมอนะคะ 📰✨'
                     }
                 },
                 'Normal_Out': {
-                    math: {
-                        low: 'ทบทวนสูตรพื้นฐาน',
-                        high: 'ฝึกโจทย์ประยุกต์'
+                   math: {
+                        low: 'ความพยายามอยู่ที่ไหน ความสำเร็จอยู่ที่นั่นค่ะ แนะนำให้ทบทวนสูตรพื้นฐานให้แม่นยำ และ ‘ฝึก’ ทำโจทย์ซ้ำๆ บ่อยๆ ให้เกิดความชำนาญ แค่นี้ก็เก่งขึ้นได้แล้วค่ะ',
+                        high: 'เยี่ยมเลยค่ะ! มีความแม่นยำในการคำนวณที่ดี แนะนำให้ลองฝึกโจทย์คำนวณประยุกต์ (โจทย์ปัญหา) ที่ท้าทายมากขึ้นได้เลยค่ะ'
                     },
                     science: {
-                        low: 'ทบทวนหลักการสำคัญ',
-                        high: 'ฝึกโจทย์วิเคราะห์'
+                        low: 'วิชาวิทย์เริ่มจากความเข้าใจเป็นหลักค่ะ 🧪 ลองทบทวนหลักการพื้นฐานเพิ่มอีกนิดแล้วสรุปเป็นแผนภาพความคิด (Mind Map) 🌳 ในสไตล์น่ารักๆ ของเราเอง วิธีนี้จะช่วยให้น้องเห็นภาพรวมและเข้าใจว่าข้อไหนเชื่อมโยงกับข้อไหนได้ชัดเจนขึ้นค่ะ ✨',
+                        high: 'เก่งมากเลยค่ะ! 🌟 แสดงว่ามีความเข้าใจเนื้อหาแล้ว ลองต่อยอดด้วยโจทย์เชิงเหตุผลหรือโจทย์วิเคราะห์ จะทำให้เก่งขึ้นไปอีกนะคะ 💪'
                     },
                     english: {
-                        low: 'เสริมคำศัพท์พื้นฐาน',
-                        high: 'ไวยากรณ์ + บทอ่านยากขึ้น'
+                        low: 'ค่อยๆ ไปทีละขั้นนะคะ แนะนำให้เริ่มจากสร้างคลังคำศัพท์พื้นฐานที่ต้องใช้บ่อยๆ และฝึกอ่านบทความสั้นๆ ให้คล่องก่อน พอเรามั่นใจขึ้น คะแนนก็จะตามมาเองค่ะ',
+                        high: 'ทำได้ดีมากค่ะ พื้นฐานภาษาอังกฤษดีเลย แนะนำให้ต่อยอดด้วยบทอ่านที่ยาวขึ้น และลองศึกษาโครงสร้างไวยากรณ์ (Grammar) ที่ซับซ้อนขึ้นได้เลยค่ะ'
                     },
                     thai: {
-                        low: 'ฝึกอ่านจับใจความ',
-                        high: 'บทอ่านวิเคราะห์ยาวขึ้น'
+                        low: 'น้องลองฝึกอ่านจับใจความและวิเคราะห์บทความ พร้อมฝึกตัดตัวเลือกที่ไม่เกี่ยวข้อง จะช่วยให้น้องทำคะแนนได้ดีขึ้นค่ะ',
+                        high: 'ยอดเยี่ยมค่ะ! น้องมีทักษะการอ่านที่ดี แนะนำให้ต่อยอดด้วยการฝึกอ่านบทวิเคราะห์หรือบทความที่ยาวและซับซ้อนขึ้นค่ะ'
                     },
                     social: {
-                        low: 'อ่านสรุป + คำสำคัญ',
-                        high: 'ฝึกโจทย์ข้อมูลและกราฟ'
+                        low: 'วิชานี้เนื้อหาค่อนข้างเยอะ แต่เราสู้ได้แน่นอนค่ะ 💪✨ แนะนำให้อ่านสรุปเนื้อหาและเน้นทบทวนคำสำคัญ (‘Keywords’) ของโจทย์ ใช้วิธีตัดตัวเลือกช่วยให้จับประเด็นข้อสอบได้ง่ายขึ้นค่ะ และอย่าลืมติดตามข่าวสารสำคัญ ๆ ที่เกิดขึ้นในแต่ละปีกันด้วยนะคะ 📰🌟',
+                        high: 'ยอดเยี่ยมมากเลยค่ะ! 🌟 แสดงว่าน้องมีจุดแข็งชัดเจน คือความเข้าใจและการจดจำเนื้อหาได้แม่นยำ 💡 อย่าลืมติดตามข่าวสารสำคัญ ๆ ที่เกิดขึ้นในแต่ละปี เช่น สถานการณ์เศรษฐกิจ ปัญหาสิ่งแวดล้อม หรือเหตุการณ์การเมือง อย่างสม่ำเสมอนะคะ 📰✨'
                     }
                 }
             };
